--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <main>
         <div class="maincontainer">
             <button id="1"></button>
-            <img class="carta" src="./img/narciso.png" alt="Título de la obra" id="narciso" onclick="seleccionarNarciso()">
-            <img class="carta" src="./img/lautaro.png" alt="Título de la obra" id="lautaro" onclick="seleccionarLautaro()">
-            <img class="carta" src="./img/alek.png" alt="Título de la obra" id="alek" onclick="seleccionarAlek()">
-            <img class="carta" src="./img/ciro.png" alt="Título de la obra" id="ciro" onclick="seleccionarCiro()">
+            <img class="carta" src="./img/narciso.png" alt="Narciso" id="narciso" onclick="seleccionarNarciso()">
+            <img class="carta" src="./img/lautaro.png" alt="Lautaro" id="lautaro" onclick="seleccionarLautaro()">
+            <img class="carta" src="./img/alek.png" alt="Alek" id="alek" onclick="seleccionarAlek()">
+            <img class="carta" src="./img/ciro.png" alt="Ciro" id="ciro" onclick="seleccionarCiro()">
         </div>
         <div>
             
